2006-10-10  Al Riddoch  <alriddoch@zepler.org>

	* skstream/sksocket.cpp: startup() on win32 can no longer use
	  LastError member, as its now static. Use a local instead.

2006-04-01  Al Riddoch  <alriddoch@zepler.org>

	* skstream/sksocket.h, skstream/sksocket.cpp: Move base socket
	  class into its own file, and move some code common to server
	  and stream sockets into this class.

	* skstream/skstream.h, skstream/skstream.cpp: Get rid of peer
	  addresses in socket buffer class, and only add it to the
	  datagram socket buffer class, as its meaningless in stream
	  sockets. Add new base class for datagram iostream classes
	  with peer related functionality. Add functionality to
	  bind datagram sockets to a local address and port.

	* skstream/skserver.h, skstream/skserver_unix.h, skstream/skserver.cpp:
	  Clean up server sockets, relying more on functionality in socket
	  base class, and getting rid of obsolete code.

	* configure.ac: Increment version and interface version.

2005-12-02  James Turner  <james@worldforge.org>

	* Add X-Code 2.0 project file (ProjectBuilder project will be deleted
	  shortly).

2005-10-03  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Add configure parameter --enable-getaddrinfo which
	  can be disabled to build a binary that will run on older windows.
	  Make sure all tests will work ok with -Werror set.

2005-09-15  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.3.5, interface version 3.0.0.

2005-09-15  Al Riddoch  <alriddoch@zepler.org>

	* skstream/sasproto.h, skstream/skpoll.cpp, skstream/skpoll.h,
	  skstream/skserver.cpp, skstream/skserver.h,
	  skstream/skserver_unix.h, skstream/skstream.cpp,
	  skstream/skstream.h, skstream/skstream_unix.h,
	  skstream/skstreamconfig.h.in: Remove duplicated changelog from
	  the source files, and add a reference to this file instead.

	* Increment version to 0.3.5 and interface version to 3.0.0.

2005-09-07  Al Riddoch  <alriddoch@zepler.org>
